--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ section {
     padding: 7rem 3rem;
 }
 
+.section-light {
+    background-color: #181717;
+}
+
 h2 {
     font-size: 4rem;
     font-weight: 500;
@@ -183,7 +187,7 @@ nav img {
 .pricelist-card-premium-features {
     display: flex;
     flex-direction: row;
-    gap:10.5rem;
+    gap: 10.5rem;
     margin-bottom: 2rem;
 }
 
@@ -341,7 +345,7 @@ nav img {
     margin-top: 1rem;
     color: #FF706A;
     max-width: fit-content;
-    }
+}
 
 .form-element input {
     height: 3.5rem;
@@ -349,9 +353,9 @@ nav img {
     font-size: 2rem;
     padding: 0.3rem;
     transition: all .4s;
-    border:none;
+    border: none;
     border-radius: 5px;
-    border:2px solid #000;
+    border: 2px solid #000;
 }
 
 .form-element input:focus {
@@ -367,12 +371,12 @@ nav img {
     padding: 0.3rem;
     border-radius: 5px;
     transition: all .4s;
-    border:2px solid #000;
+    border: 2px solid #000;
     box-shadow: 0 0 10px 5px #0b4968c4;
 }
 
-.form-element textarea:focus{
-transform: scale(1.03);
+.form-element textarea:focus {
+    transform: scale(1.03);
 }
 
 .button-container {
@@ -383,4 +387,3 @@ transform: scale(1.03);
 .contact-us-card button {
     margin-top: 2rem;
 }
-
