--- a/css/queries.css
+++ b/css/queries.css
@@ -51,4 +51,23 @@
 
 }
 
-@media only screen and (max-width: 767px) {}
+@media only screen and (max-width: 767px) {
+    html, body {
+        font-size: 7px;
+    }
+    nav {
+        position: relative;
+    }
+
+    nav ion-icon[name="reorder-three"] {
+        display: block;
+        font-size: 32px;
+    }
+    .nav-links {
+        opacity: 0;
+        position: absolute;
+        flex-direction: column;
+        top: 16rem;
+    }
+
+}
