--- a/css/styles.css
+++ b/css/styles.css
@@ -100,8 +100,6 @@ header {
     background-position: center;
     background-attachment: fixed;
     padding: 2rem;
-    margin-bottom: 5rem;
-
 }
 
 .hero-text {
@@ -171,7 +169,8 @@ nav img {
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 100rem;
-    margin: 5rem auto;
+    gap:5rem;
+    margin: 5rem auto 0 auto;
 }
 
 .pricelist-card {
@@ -181,8 +180,12 @@ nav img {
     padding: 1rem;
     position: relative;
     /*---DIV prop.*/
-    margin: 2.5rem;
+    margin: 0 auto 0 auto;
     flex: 1 0 calc(35% - 2.5rem);
+}
+
+.pricelist-card:last-child {
+    margin-bottom: 0;
 }
 
 .pricelist-card-premium-features {
@@ -303,7 +306,7 @@ nav img {
     position: absolute;
     top: -12rem;
     left: 50%;
-    max-width: 10rem;
+    transform: translateX(-50%);
     white-space: nowrap;
 }
 .contact-us-card-1{
