--- a/css/queries.css
+++ b/css/queries.css
@@ -66,8 +66,15 @@
     .nav-links {
         opacity: 0;
         position: absolute;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         top: 16rem;
+        right: 0;
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
     }
 
 }
