--- a/css/queries.css
+++ b/css/queries.css
@@ -52,6 +52,7 @@
         font-size: 1.5em;
     }
 }
+
 /* mobile - phones */
 @media only screen and (max-width: 767px) {
 
@@ -62,6 +63,30 @@
     html,
     body {
         font-size: 7px;
+    }
+
+    nav {
+        position: relative;
+    }
+
+    nav ion-icon[name="reorder-three"] {
+        display: block;
+        font-size: 32px;
+    }
+
+    .nav-links {
+        opacity: 0;
+        position: absolute;
+        flex-direction: column;
+        top: 10rem;
+        align-items: flex-end;
+        right: 0rem;
+        transition: opacity 0.4s ease;
+        gap: 3rem;
+    }
+
+    .nav-links a {
+        padding: 1.5rem 2rem;
     }
 
     .contact-us-card-1,
@@ -77,11 +102,63 @@
         margin: 10rem auto 0 auto;
     }
 
-footer {
-    padding: 4rem 3rem;
+    footer {
+        padding: 4rem 3rem;
+    }
+
+    .footer-top {
+        margin: 1rem auto 2rem auto;
+    }
 }
 
-.footer-top {
-    margin: 1rem auto 2rem auto;
+/* small mobile - phones
+@media only screen and (max-width: 400px) { */
+
+.hero-text {
+    margin-left: 3rem;
 }
+
+.pricelist-card-premium-features {
+    gap: 5rem;
+}
+
+.card-feature {
+    gap: 1rem;
+}
+
+.contact-us-row {
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.branches-title {
+    margin-top: 2rem;
+}
+
+footer {
+    padding: 2rem 3rem;
+}
+
+.footer-brand-row img {
+    max-width: 9rem;
+    max-height: 9rem;
+    gap: 0rem;
+}
+
+.footer-brand-row {
+    flex-direction: column;
+}
+
+.footer-brand-info-col h4 {
+    font-size: 3rem;
+}
+
+.footer-brand-info-col p {
+    max-width: 24rem;
+    text-align: justify;
+}
+
+.footer-links-col {
+    justify-content: center;
+    gap: 1rem;
 }
