--- a/css/queries.css
+++ b/css/queries.css
@@ -114,7 +114,7 @@
         margin-left: 2.5rem;
     }
 }
-
+/* dodac comment */
 @media only screen and (max-width: 450px) {
 
     .contact-us-row {
