--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@ textarea {
 /* REUSABLE */
 /* --------------------------- */
 
+h4 {
+    font-size: 3.5rem;
+}
+
 section {
     padding: 7rem 3rem;
 }
@@ -417,8 +421,8 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 4rem auto;
-    max-width: 120rem;
+    margin: 2rem auto 4rem auto;
+    max-width: 130rem;
 }
 
 .footer-brand-row {
@@ -439,28 +443,40 @@ footer {
     max-width: 30rem;
 }
 
-.footer-brand-info-col h4 {
-    font-size: 4.5rem;
-}
-
 .footer-brand-info-col p {
     font-size: 1.5rem;
     text-align: left;
+    text-align: justify;
+}
+
+.footer-menu-contact-row {
+    display: flex;
+    flex-direction: row;
+    max-width: 40rem;
+    width: 100%;
+    margin: 0 5rem;
+    justify-content: space-between;
 }
 
 .footer-links-col {
-    max-width: 50rem;
-    font-weight: 600;
     display: flex;
     flex-direction: column;
     gap: 1.8rem;
-}
+   }
 
-.footer-links-col a {
-    font-size: 2rem;
+.footer-contact-col {
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
+  }
+
+.footer-links-col a,
+.footer-contact-col a {
+    font-size: 1.5rem;
     line-height: 1;
     display: flex;
     align-items: center;
+    font-weight: 600;
 }
 
 .footer-item {
