--- a/css/queries.css
+++ b/css/queries.css
@@ -1,6 +1,6 @@
 /* laptops and big tablets - 1024px - 1200px */
 @media only screen and (max-width: 1200px) {
-    /* for now nothing to change   */
+    /* for now nothing to change */
 }
 
 /* tablets 768px - 1023px */
@@ -40,8 +40,13 @@
         padding: 4rem 3rem;
     }
 
+    .footer-brand-row img {
+        max-width: 11rem;
+        max-height: 11rem;
+    }
+
     h4 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 
     .footer-links-col a {
@@ -50,11 +55,6 @@
 
     .footer-contact-col {
         margin-left: 3rem;
-    }
-
-    .footer-brand-row img {
-        max-width: 11rem;
-        max-height: 11rem;
     }
 }
 
@@ -118,16 +118,18 @@
     .footer-top {
         margin: 1rem auto 4rem auto;
     }
-
-    h4 {
-        font-size: 2rem;
-    }
 }
-/* adjustment for footer */
-@media only screen and (max-width: 500px) {
+
+/* adjustment for footer, direction: row->col */
+@media only screen and (max-width: 600px) {
 
     .footer-top {
         flex-direction: column;
+        margin: 1rem auto 3rem auto;
+    }
+
+    .footer-brand-row {
+        margin-bottom: 1rem;
     }
 
     .footer-brand-info-col {
@@ -135,7 +137,12 @@
     }
 
     .footer-menu-contact-row {
-        margin: 2rem auto 0 auto;
+        margin: 0 auto 0 auto;
+        max-width: 44rem;
+    }
+
+    h5 {
+        font-size: 2.3rem;
     }
 }
 
@@ -147,20 +154,9 @@
         gap: 2rem;
     }
 
-    .footer-top {
-        flex-direction: column;
-    }
-
     .footer-links-col {
-        text-align: left;
         gap: 1.3rem;
     }
-
-    .footer-brand-row img {
-        max-width: 11rem;
-        max-height: 11rem;
-    }
-
 }
 
 /* small mobile - phones*/
@@ -168,11 +164,6 @@
 
     .card-feature {
         gap: 1rem;
-    }
-
-    .contact-us-row {
-        flex-direction: column;
-        gap: 2rem;
     }
 
     .branches-title {
@@ -188,14 +179,4 @@
         max-height: 9rem;
         gap: 0rem;
     }
-
-    .footer-brand-info-col p {
-       text-align: justify;
-    }
-
-    .footer-links-col {
-        justify-content: center;
-        gap: 1rem;
-    }
-
 }
