--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,8 @@ h2 {
     font-size: 4rem;
     font-weight: 500;
     text-transform: uppercase;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     margin: 0 auto;
     margin-bottom: 2rem;
@@ -360,6 +362,8 @@ nav ion-icon[name="reorder-three"] {
     margin-bottom: 1rem;
     margin-top: 1rem;
     color: #FF706A;
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
     max-width: fit-content;
 }
 
@@ -397,7 +401,7 @@ nav ion-icon[name="reorder-three"] {
 
 .button-container {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 2rem;
 }
 
@@ -439,7 +443,7 @@ footer {
     font-size: 1.5rem;
     text-align: left;
     text-align: justify;
-    line-height: 2.2rem ;
+    line-height: 2.2rem;
 }
 
 h4 {
